# vecy

./: CMakeLists.txt  readme.md  workbench.build.jsonc
cmake/modules/: FindwxWidgets.cmake
src/: CMakeLists.txt
src/vecy/: main.cc
